# Assedik

./: .gitignore  CMakeLists.txt  LICENSE  README.md  oejesaisyapasgrandchosequachangemaischutjebloque  test.txt
Code-Final/: .gitignore  README.md
Code-Final/include/: bob.h  define.h  gamesave.h
Code-Final/src/: bob.c  gamesave.c  moves.c  plateau.c  ui.c
Code-assemble/Theo/: .gitignore  CMakeLists.txt  LICENSE  README.md  game_saved.txt
Code-assemble/Theo/include/: plateau.h  rules.h
Code-assemble/Theo/src/: bob.c  gamesave.c  main.c
include/: bob.h  components.h  define.h  gamesave.h  moves.h  plateau.h  rules.h  ui.h
src/: bob.c  components.c  gamesave.c  main.c  moves.c  plateau.c  rules.c  ui.c
